correction footer version mobile ok CSS

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -628,32 +628,35 @@ h1 {
   .liste_restaurants .container_restaurants .etiquette_restaurant:hover {
     transform: scale(1.1);
   }
+}
 
-   
-
+@media screen and (min-width: 370px) {
   footer {
     display: block;
     background-color: #353535;
     margin: 0;
-    border: 0;
+    padding: 0;
     font-size: 100%;
     vertical-align: baseline;
     padding: 25px;
     color: white;
   }
-  
+}
+ 
   @media screen and (min-width: 768px) {
     footer {
       text-align: center;
     }
   }
   footer h3 {
-    font-family: "Shrikhand", "sans-serif";
+    font-family: "Shrikhand" ;
     padding: 5px 0 20px 0;
-  }
   
+  }
+
   footer a {
     color: white;
+    text-decoration: none;
   }
   footer ul {
     list-style-type: none;
@@ -675,6 +678,7 @@ h1 {
   .fa-utensils {
     padding-right: 5px;
   }
+
   
 
   
